--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +7,9 @@
   <meta name="description" content="Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Expert in Power BI, SQL, Python, and agricultural data analytics.">
   <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning">
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com " rel="preconnect">
-  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com  " rel="preconnect">
+  <link href="https://fonts.gstatic.com  " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -21,10 +20,10 @@
   <link href="assets/css/main.css" rel="stylesheet">
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/license/ 
   ======================================================== -->
 </head>
 <body class="index-page">
@@ -45,7 +44,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
       <div class="header-social-links">
-        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927 " class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
   </header>
@@ -66,26 +65,20 @@
               </p>
               <!-- 3-Column Feature Grid -->
               <div class="row mt-4">
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                  <div class="feature-box text-center">
-                    <i class="bi bi-graph-up text-primary fs-1"></i>
-                    <h5>Data Analytics</h5>
-                    <p>Cut survey errors <strong>35 %</strong> and transform raw field data into actionable insights</p>
-                  </div>
+                <div class="col-md-4 feature-box text-center" data-aos="fade-up" data-aos-delay="100">
+                  <i class="bi bi-graph-up text-primary fs-1"></i>
+                  <h5>Data Analytics</h5>
+                  <p>Cut survey errors <strong>35 %</strong> and transform raw field data into actionable insights</p>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                  <div class="feature-box text-center">
-                    <i class="bi bi-speedometer2 text-primary fs-1"></i>
-                    <h5>Power BI Dashboards</h5>
-                    <p>Real-time monitoring solutions that reduce reporting TAT <strong>50 %</strong></p>
-                  </div>
+                <div class="col-md-4 feature-box text-center" data-aos="fade-up" data-aos-delay="200">
+                  <i class="bi bi-speedometer2 text-primary fs-1"></i>
+                  <h5>Power BI Dashboards</h5>
+                  <p>Real-time monitoring solutions that reduce reporting TAT <strong>50 %</strong></p>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                  <div class="feature-box text-center">
-                    <i class="bi bi-clipboard-data text-primary fs-1"></i>
-                    <h5>MEL Frameworks</h5>
-                    <p>Donor-compliant frameworks managing <strong>50+ staff</strong> across multiple counties</p>
-                  </div>
+                <div class="col-md-4 feature-box text-center" data-aos="fade-up" data-aos-delay="300">
+                  <i class="bi bi-clipboard-data text-primary fs-1"></i>
+                  <h5>MEL Frameworks</h5>
+                  <p>Donor-compliant frameworks managing <strong>50+ staff</strong> across multiple counties</p>
                 </div>
               </div>
              <!-- Featured Projects Cards -->
@@ -106,7 +99,7 @@
                       <div class="card-body text-center">
                         <h6 class="card-title">Agricutural Production Analysis</h6>
                         <p class="card-text">Analysis of Kenyan county-level agricultural data for sustainability and food security planning.</p>
-                        <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
+                        <a href="https://github.com/Ocholar/county-agricultural-production-analysis " target="_blank" class="btn btn-sm btn-outline-primary">
                           <i class="bi bi-github"></i> View Code
                         </a>
                       </div>
@@ -120,7 +113,7 @@
               </div>
               <div class="social-links d-flex justify-content-start gap-3 mt-4" data-aos="fade-up" data-aos-delay="600">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/reagan-ochola-aba10927 " target="_blank"><i class="bi bi-linkedin"></i></a>
                 <a href="#"><i class="bi bi-github"></i></a>
                 <a href="#"><i class="bi bi-dribbble"></i></a>
               </div>
@@ -142,14 +135,14 @@
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927 "><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/  -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/  ">BootstrapMade</a>
       </div>
     </div>
   </footer>
@@ -172,4 +165,3 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
-```
