--- a/index.html
+++ b/index.html
@@ -3,186 +3,50 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
-  <meta name="description" content="Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Expert in Power BI, SQL, Python, and agricultural data analytics.">
-  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning">
-
+  <title>About - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
+  <meta name="description" content="About Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
+  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, About, Reagan Ochola">
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com " rel="preconnect">
+  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+  <!-- =======================================================
+  * Template Name: FolioOne
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Updated: Aug 23 2025 with Bootstrap v5.3.7
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+ <!-- ======= Header ======= -->
+  <header id="header" class="header d-flex align-items-center light-background sticky-top">
+    <div class="container position-relative d-flex align-items-center justify-content-between">
 
-  <!-- Inline Custom Fixes -->
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      color: #e5e7eb;
-      background-color: #0f172a;
-    }
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-    /* --- Header --- */
-    header.header {
-      background: #0f172a;
-      height: 70px;
-      border-bottom: 1px solid rgba(255,255,255,0.05);
-    }
+      <div class="header-social-links">
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
 
-    header .logo span {
-      font-weight: 600;
-      color: #fff;
-      font-size: 1.2rem;
-    }
-
-    .navmenu ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 20px;
-    }
-
-    .navmenu a {
-      color: #d1d5db;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    .navmenu a:hover,
-    .navmenu a.active {
-      color: #38bdf8;
-    }
-
-    /* --- Hero Section Fix --- */
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 80px 0;
-    }
-
-    .hero .container {
-      max-width: 1100px;
-    }
-
-    .hero-content p {
-      max-width: 800px;
-      margin: 0 auto 1.2rem auto;
-      line-height: 1.7;
-      color: #e5e7eb;
-    }
-
-    .hero h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: #fff;
-    }
-
-    .hero h2 {
-      font-size: 1.4rem;
-      font-weight: 500;
-      color: #9ca3af;
-      margin-bottom: 1rem;
-    }
-
-    .highlight {
-      color: #38bdf8;
-    }
-
-    .hero img {
-      max-width: 300px;
-      border-radius: 50%;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-      margin: 0 auto;
-      display: block;
-    }
-
-    /* --- Feature Boxes --- */
-    .feature-box {
-      background-color: #1e293b;
-      border-radius: 12px;
-      padding: 20px;
-      color: #f1f5f9;
-      transition: all 0.3s ease;
-      height: 100%;
-    }
-
-    .feature-box:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 25px rgba(56,189,248,0.2);
-    }
-
-    .feature-box i {
-      color: #38bdf8;
-    }
-
-    .feature-box h5 {
-      font-weight: 600;
-      margin-top: 12px;
-    }
-
-    /* --- Cards Section --- */
-    .card {
-      border: none;
-      border-radius: 12px;
-      background-color: #1e293b;
-      color: #e5e7eb;
-    }
-
-    .card .btn {
-      margin-top: 10px;
-    }
-
-    /* --- Buttons --- */
-    .btn-primary {
-      background-color: #38bdf8;
-      border: none;
-    }
-
-    .btn-primary:hover {
-      background-color: #0ea5e9;
-    }
-
-    .btn-outline-primary {
-      border-color: #38bdf8;
-      color: #38bdf8;
-    }
-
-    .btn-outline-primary:hover {
-      background-color: #38bdf8;
-      color: #fff;
-    }
-
-    /* --- Footer --- */
-    footer.footer {
-      background-color: #0f172a;
-      color: #94a3b8;
-      text-align: center;
-      padding: 30px 0;
-      font-size: 0.9rem;
-    }
-
-    footer.footer a {
-      color: #38bdf8;
-      text-decoration: none;
-    }
-
-    footer.footer a:hover {
-      text-decoration: underline;
-    }
-
-  </style>
-
-</head>
+    </div>
+  </header><!-- End Header -->
 
 <body class="index-page">
   <header id="header" class="header d-flex align-items-center sticky-top">
