--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
-  <meta name="description" content="About Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
-  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, About, Reagan Ochola">
+  <title>Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
+  <meta name="description" content="Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
+  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Reagan Ochola, Monitoring, Evaluation, Learning, Dashboard, Portfolio">
+
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com " rel="preconnect">
-  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
   <!-- =======================================================
   * Template Name: FolioOne
   * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
@@ -25,9 +29,17 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
- <!-- ======= Header ======= -->
+</head>
+
+<body class="index-page">
+
+  <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center">
+        <span>Reagan Ochola</span>
+      </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -42,38 +54,18 @@
       </nav>
 
       <div class="header-social-links">
+        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
   </header><!-- End Header -->
 
-<body class="index-page">
-  <header id="header" class="header d-flex align-items-center sticky-top">
-    <div class="container position-relative d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
-        <span>Reagan Ochola</span>
-      </a>
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      </div>
-    </div>
-  </header>
-
+  <!-- ======= Main Content ======= -->
   <main class="main">
+
     <!-- Hero Section -->
     <section id="hero" class="hero section">
       <div class="container" data-aos="fade-up">
@@ -86,49 +78,46 @@
               <p>Based in Nairobi, Kenya, I help agriculture and development organisations optimise operations through data-driven decision making. My expertise bridges complex agricultural data and practical, actionable intelligence.</p>
             </div>
           </div>
-          <div class="col-lg-4 order-1 order-lg-2">
-            <img src="assets/img/profile-img.jpg" alt="Reagan Ochola">
-          </div>
         </div>
 
         <!-- Feature Grid -->
         <div class="row mt-5 g-4 justify-content-center">
           <div class="col-md-4" data-aos="fade-up">
-            <div class="feature-box text-center">
-              <i class="bi bi-graph-up fs-1"></i>
+            <div class="feature-box text-center p-3 border rounded">
+              <i class="bi bi-graph-up fs-1 mb-2 text-primary"></i>
               <h5>Data Analytics</h5>
-              <p>Cut survey errors <strong>35%</strong> and transform raw field data into actionable insights</p>
+              <p>Cut survey errors <strong>35%</strong> and transform raw field data into actionable insights.</p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="feature-box text-center">
-              <i class="bi bi-speedometer2 fs-1"></i>
+            <div class="feature-box text-center p-3 border rounded">
+              <i class="bi bi-speedometer2 fs-1 mb-2 text-primary"></i>
               <h5>Power BI Dashboards</h5>
-              <p>Real-time monitoring solutions that reduce reporting TAT <strong>50%</strong></p>
+              <p>Real-time monitoring solutions that reduce reporting turnaround time by <strong>50%</strong>.</p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="feature-box text-center">
-              <i class="bi bi-clipboard-data fs-1"></i>
+            <div class="feature-box text-center p-3 border rounded">
+              <i class="bi bi-clipboard-data fs-1 mb-2 text-primary"></i>
               <h5>MEL Frameworks</h5>
-              <p>Donor-compliant frameworks managing <strong>50+ staff</strong> across multiple counties</p>
+              <p>Donor-compliant frameworks managing <strong>50+ staff</strong> across multiple counties.</p>
             </div>
           </div>
         </div>
 
-        <!-- Cards -->
+        <!-- Cards Section -->
         <div class="mt-5" data-aos="fade-up">
-          <h4 class="text-center mb-4">See How Data Drives Strategic Impact</h4>
+          <h4 class="text-center mb-4 fw-semibold">See How Data Drives Strategic Impact</h4>
           <div class="row g-3 justify-content-center">
             <div class="col-md-5">
-              <div class="card text-center p-3">
+              <div class="card text-center p-3 shadow-sm">
                 <h6>Kenya MSME Manufacturing Analysis</h6>
-                <p>5,016 firms, 11,277 jobs, 39.8% female-owned employment</p>
+                <p>5,016 firms • 11,277 jobs • 39.8% female-owned employment</p>
                 <a href="portfolio-details.html" class="btn btn-sm btn-primary">View Details</a>
               </div>
             </div>
             <div class="col-md-5">
-              <div class="card text-center p-3">
+              <div class="card text-center p-3 shadow-sm">
                 <h6>Agricultural Production Analysis</h6>
                 <p>County-level agricultural data analysis for sustainability and food security.</p>
                 <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
@@ -140,19 +129,28 @@
         </div>
 
       </div>
-    </section>
-  </main>
+    </section><!-- /Hero Section -->
 
-  <!-- Footer -->
+  </main><!-- /Main -->
+
+  <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="container">
+    <div class="container text-center">
       <p>© <strong>Reagan Ochola</strong> | All Rights Reserved</p>
       <p>Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></p>
+      <div class="social-links d-flex justify-content-center mt-2">
+        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
     </div>
-  </footer>
+  </footer><!-- /Footer -->
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
