--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
                     <div class="card-body text-center p-3">
                       <h6 class="card-title fw-bold">Agricultural Production Analysis</h6>
                       <p class="card-text small">County-level agricultural data analysis for sustainability and food security planning.</p>
-                      <a href="https://github.com/Ocholar/county-agricultural-production-analysis" target="_blank" class="btn btn-sm btn-outline-primary">
-                        <i class="bi bi-github"></i> View Code
-                      </a>
+                      <a href="portfolio-details2.html" class="btn btn-sm btn-primary">View Details</a>
                     </div>
                   </div>
                 </div>
