--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                   <div class="card h-100 shadow-sm border-0" style="transition: transform 0.3s ease;">
                     <div class="card-body text-center p-3">
                       <h6 class="card-title fw-bold">Agricultural Production Analysis</h6>
-                      <p class="card-text small">County-level agricultural data analysis for sustainability and food security planning.</p>
-                      <a href="portfolio-details2.html" class="btn btn-sm btn-primary">View Details</a>
+                      <p class="card-text small">6.35M households, 4.51 average household Size, 60.7% agriculture specialization index</p>
+                      <a href="https://github.com/Ocholar/county-agricultural-production-analysis" class="btn btn-sm btn-primary">View Code</a>
                     </div>
                   </div>
                 </div>
